--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
+}
+
+.pad-70{
+  padding: 0 70px;
+}
